- Added PortMidi libraries to win(64)lib - Added advapi32 so PortMidi would link correctly into mixxx.exe - Fixed mididevicemanager.cpp so output devices can appear in any order for matching (needed on Windows)

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -437,6 +437,7 @@ if platform == 'win32':
 if 'win' in platform:
 	env.Append(CPPPATH='../../lib/ladspa') #If you add more directories, separate them with a semicolon (;)
 	env.Append(LINKFLAGS = ['/nodefaultlib:libc.lib', '/nodefaultlib:libcd.lib',  '/entry:mainCRTStartup'])
+	env.Append(LIBS='advapi32') # needed for PortMIDI
 #'/subsystem:windows',
 
 if platform == 'bsd':
