* Deleting WTrackTableFilter * Adding BrowseFilter, a simpler QSortFilterProxyModel * Updating BrowseFeature to filter the QFileSystemModel for filetypes Mixxx supports.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -392,6 +392,7 @@ sources = Split("""
                 library/rhythmboxfeature.cpp
                 library/itunesfeature.cpp
                 library/browsefeature.cpp
+                library/browsefilter.cpp
                 library/sidebarmodel.cpp
                 library/libraryscanner.cpp
                 library/libraryscannerdlg.cpp
