Wrapping raw strings in Rhythmbox classes with tr(), fixing some indentation.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -381,6 +381,7 @@ sources = Split("""
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
+                library/proxytrackmodel.cpp
                 library/abstractxmltrackmodel.cpp
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
