* Adding SearchThread, a queue-based worker thread for delivering search() calls to TrackModels. Every time SearchThread processes queued searches, for each TrackModel it only executes the most recent search queued for that model. * Changed WTrackTableView to create a SearchThread and issue all searches via it.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -398,6 +398,7 @@ sources = Split("""
                 library/libraryscanner.cpp
                 library/libraryscannerdlg.cpp
                 library/library.cpp
+                library/searchthread.cpp
 
                 xmlparse.cpp
                 parser.cpp
