* Rework LibraryFeature's so that they provide their children via a model. * Split onRightClick, dropAccept, and dragMoveAccept into a method for the root and for the child. (eg. onRightClick, onRightClickChild). * Updated each LibraryFeature to match the new spec. PlaylistFeature/CrateFeature use QSqlTableModel while RhythmboxFeatures/ITunesFeature use QStringListModel.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -393,12 +393,14 @@ sources = Split("""
                 library/rhythmboxfeature.cpp
                 library/itunesfeature.cpp
                 library/browsefeature.cpp
+                library/cratefeature.cpp
                 library/browsefilter.cpp
                 library/sidebarmodel.cpp
                 library/libraryscanner.cpp
                 library/libraryscannerdlg.cpp
                 library/library.cpp
                 library/searchthread.cpp
+                library/dao/cratedao.cpp
 
                 xmlparse.cpp
                 parser.cpp
