Added a WLibraryTextEdit class for showing random text/html in the library pane. This may not be useful but for now its something for crates/playlists to show when their main element is clicked.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -378,6 +378,7 @@ sources = Split("""
                 widget/wlibrary.cpp
                 widget/wlibrarytableview.cpp
                 widget/wbrowsetableview.cpp
+                widget/wlibrarytextedit.cpp
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
