Adding CrateTableModel and using it in CrateFeature. Crates work now, and drag-n-drop to and from crates works fine. You'll get random SQL errors in the log when you try to add a file to a crate twice and the temporary view is not currently destroyed.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -402,6 +402,7 @@ sources = Split("""
                 library/library.cpp
                 library/searchthread.cpp
                 library/dao/cratedao.cpp
+                library/cratetablemodel.cpp
 
                 xmlparse.cpp
                 parser.cpp
