- Update TIO to hold a list of Cue's. - Update TrackCollection to have a CueDAO and load/save cues on track load. - Update Player to load a load cue on track load.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -403,6 +403,8 @@ sources = Split("""
                 library/searchthread.cpp
                 library/dao/cratedao.cpp
                 library/cratetablemodel.cpp
+                library/dao/cuedao.cpp
+                library/dao/cue.cpp
 
                 xmlparse.cpp
                 parser.cpp
