* Jumbo code refactoring day!   * Split up TrackCollection into PlaylistDAO and TrackDAO.   * Reworked craploads of code to use those DAOs.   * Fixed problems with track_locations table messing up indexing in various data models by making everything consistently use the track_id instead.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -405,6 +405,8 @@ sources = Split("""
                 library/cratetablemodel.cpp
                 library/dao/cuedao.cpp
                 library/dao/cue.cpp
+                library/dao/trackdao.cpp
+                library/dao/playlistdao.cpp
 
                 xmlparse.cpp
                 parser.cpp
