More work on hotcues -- the GUI and MIDI can now control a track's hotcues via the controls provided by EngineControl.
* Add CueControl, an EngineControl that handles hotcues for the Player. 
* Let EngineControl emit seek request signals
* Change Cue to be a QObject
* Add update signals to Cue and TrackInfoObject
* Make Player instantiate a CueControl, connect its signals, and add it to the Engine

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -314,6 +314,7 @@ sources = Split("""
                 engine/ratecontrol.cpp
                 engine/loopingcontrol.cpp
                 engine/bpmcontrol.cpp
+                engine/cuecontrol.cpp
                 engine/readaheadmanager.cpp
                 cachingreader.cpp
 
@@ -407,6 +408,7 @@ sources = Split("""
                 library/dao/cue.cpp
                 library/dao/trackdao.cpp
                 library/dao/playlistdao.cpp
+
 
                 xmlparse.cpp
                 parser.cpp
