* Added LibraryHashDAO, rolled the SQL out of LibraryScanner. Deals with hashes of directories in your library. * Added a broken table model for "Missing Songs". * Added code in LibraryScanner and TrackDAO that attempts to detect tracks that have been deleted when your library is rescanned.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -382,6 +382,7 @@ sources = Split("""
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
                 library/browsetablemodel.cpp
+                library/missingtablemodel.cpp
                 library/proxytrackmodel.cpp
                 library/abstractxmltrackmodel.cpp
                 library/rhythmboxtrackmodel.cpp
@@ -407,6 +408,7 @@ sources = Split("""
                 library/dao/cue.cpp
                 library/dao/trackdao.cpp
                 library/dao/playlistdao.cpp
+                library/dao/libraryhashdao.cpp
 
 
                 xmlparse.cpp
