Adding WaveformRenderMarkRange -- a RenderObject that paints a translucent rectangle over a range in the waveform.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -404,6 +404,7 @@ sources = Split("""
 		waveform/waveformrendersignal.cpp
 		waveform/waveformrendersignalpixmap.cpp
 		waveform/waveformrendermark.cpp
+                waveform/waveformrendermarkrange.cpp
                 waveform/waveformrenderbeat.cpp
 
 
