* Add MIDI receive inhibit flag to MidiDevice. Should help us prevent a race condition... * Removed old MIDI dialog

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -549,7 +549,8 @@ if not conf.CheckHeader(['porttime.h']):
 #	print "Did not find PortMidi or it\'s development headers, exiting!"
 #	Exit(1)
 env.Append(LIBS = 'portmidi') #Hax... the above check fails in Linux even if you have the lib for some reason..
-env.Append(LIBS = 'porttime') #HAX 2: Revenge of Hax. Only Linux needs PortTime...
+if platform == 'linux':
+	env.Append(LIBS = 'porttime') #HAX 2: Revenge of Hax. Only Linux needs PortTime...
 
 sources += Split("""midi/mididevice.cpp """);
 sources += Split("""midi/mididevicemanager.cpp """);
