* Switched WLibraryTextEdit---->WLibraryTextBrowse for more flexibility (html files from our QRC) * Added slightly better overview pages for Crates and Playlists.

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -384,7 +384,7 @@ sources = Split("""
                 widget/wpreparelibrarytableview.cpp
                 widget/wpreparecratestableview.cpp
                 widget/wbrowsetableview.cpp
-                widget/wlibrarytextedit.cpp
+                widget/wlibrarytextbrowser.cpp
                 library/preparecratedelegate.cpp
                 library/trackcollection.cpp
                 library/librarytablemodel.cpp
