Add prelimary library MIDI controls (untested)

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -378,6 +378,7 @@ sources = Split("""
                 peaklist.cpp
                 rotary.cpp
                 wtracktableview.cpp
+                library/wtracktableviewcontroller.cpp
                 widget/wlibrarysidebar.cpp
                 widget/wlibrary.cpp
                 widget/wlibrarytableview.cpp
