* Applied Zach Shutters' 1.7 XML to 1.8 DB library upgrade patch * Rolled Zach's code into its own class

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -412,6 +412,7 @@ sources = Split("""
                 library/sidebarmodel.cpp
                 library/libraryscanner.cpp
                 library/libraryscannerdlg.cpp
+                library/legacylibraryimporter.cpp
                 library/library.cpp
                 library/searchthread.cpp
                 library/dao/cratedao.cpp
