--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -396,6 +396,7 @@ sources = Split("""
                 library/rhythmboxtrackmodel.cpp
                 library/rhythmboxplaylistmodel.cpp
                 library/itunestrackmodel.cpp
+                library/itunesplaylistmodel.cpp
                 library/playlisttablemodel.cpp
                 library/libraryfeature.cpp
                 library/preparefeature.cpp
