Adding WTrackTableViewHeader, a header widget for the WTrackTableView.
This will be used to sanely save header state across track models (a feature that broke with the missing-columns fix). Making a hide/show column context menu was easy so I added that as well (resolves wishlist bug #360902)

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -380,6 +380,7 @@ sources = Split("""
                 peaklist.cpp
                 rotary.cpp
                 wtracktableview.cpp
+                widget/wtracktableviewheader.cpp
                 widget/wlibrarysidebar.cpp
                 widget/wlibrary.cpp
                 widget/wlibrarytableview.cpp
